--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,15 @@
 /images
 /output_images
 /videos
-/got_num
-/no_num
+
 /raw_data_set
 /prep_data_set
 /cont_data_set
-/atest_set
+/got_num
+/no_num
+
+/data_set_images
+/prep_data_images
+/cont_data_images
+/got_num_final
+/no_num_final
