--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,12 @@
 /cont_data_2
 /got_num_2
 /no_num_2
+/got_num_3
+/no_num_3
+/raw_data_set_3
+/prep_data_set_3
+/got_num_final
+/no_num_final
 
 /binary_roi
 /final
